# reqsit

./: .gitignore  LICENSE  README.md  SConstruct  pyproject.toml  requirements.txt
.github/workflows/: ci-test.yml  ci.yml  python-publish.yml
reqsit/: main.py
tests/: __init__.py  main_test.py
